[gd_scene load_steps=18 format=3 uid="uid://c4e6akwqys4p7"]

[ext_resource type="Script" path="res://World/level2.gd" id="1_4x3fb"]
[ext_resource type="Texture2D" uid="uid://c5necl7bp4dqa" path="res://icon.svg" id="1_ni4hg"]
[ext_resource type="PackedScene" uid="uid://dr24s6rc63ylv" path="res://Player/player.tscn" id="2_buv0e"]
[ext_resource type="Texture2D" uid="uid://cuugp74vbg5nb" path="res://World/Assets/tileset.png" id="3_rpm5t"]
[ext_resource type="PackedScene" uid="uid://de2v1quc4h63b" path="res://World/Gold/Gold.tscn" id="4_s2apd"]
[ext_resource type="PackedScene" uid="uid://wmu6oqv7amit" path="res://Shared/Components/cave_entrance.tscn" id="5_eklv8"]
[ext_resource type="PackedScene" uid="uid://qbsnniqv085h" path="res://World/standing_light.tscn" id="5_nbqpy"]
[ext_resource type="PackedScene" uid="uid://b7d86ei0ty5an" path="res://UI/TopBar.tscn" id="8_pmftk"]
[ext_resource type="PackedScene" uid="uid://pmk66mqxt7jm" path="res://bat.tscn" id="8_xiclq"]
[ext_resource type="PackedScene" uid="uid://dyo8t3yepu4hg" path="res://Shared/Components/whiskey.tscn" id="10_et4ya"]
[ext_resource type="Script" path="res://World/DoorToOutside.gd" id="11_1rg27"]
[ext_resource type="Texture2D" uid="uid://booi51cllpj1l" path="res://UI/ToTown_sign.png" id="12_f2gb0"]
[ext_resource type="Texture2D" uid="uid://cr5eh87br5rj4" path="res://UI/ToMine_sign.png" id="13_6nslk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jwjnr"]
texture = ExtResource("3_rpm5t")
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_7247w"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_jwjnr")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkb68"]
size = Vector2(42.0191, 122.977)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evr8a"]

[node name="Main" type="Node2D"]
scale = Vector2(0.999405, 1.0002)
script = ExtResource("1_4x3fb")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(-92.0548, 11.9976)
texture = ExtResource("1_ni4hg")

[node name="TileMap2" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_7247w")
format = 2
layer_0/name = "1"
layer_0/z_index = -2
layer_0/tile_data = PackedInt32Array(2097172, 65536, 3, 2097173, 65536, 3, 2097174, 65536, 3, 2097175, 65536, 3, 2097176, 65536, 3, 2097177, 65536, 3, 2097178, 65536, 3, 2031636, 327680, 3, 2031637, 393216, 3, 2031638, 458752, 3, 2031639, 524288, 3, 2031640, 655360, 3, 2031641, 655360, 5, 2031642, 655360, 3, 2031643, 589824, 3, 2031644, 327680, 3, 2228244, 65536, 5, 2228245, 131072, 5, 2228246, 131072, 5, 2228247, 65536, 5, 2228248, 131072, 5, 2228249, 196608, 5, 1966100, 196608, 1, 1966101, 196608, 1, 1966102, 196608, 1, 1966103, 196608, 1, 1966104, 196608, 1, 1966105, 196608, 1, 1966106, 196608, 1, 1966107, 196608, 1, 1966108, 196608, 1, 1966099, 131072, 1, 2031635, 131072, 2, 2097171, 393216, 2, 2162707, 655360, 5, 2162706, 524288, 3, 2097170, 196608, 1, 2162705, 131072, 2, 2097169, 131072, 1, 2228241, 131072, 2, 2293777, 131072, 2, 2359313, 131072, 3, 2359314, 196608, 3, 2359315, 393216, 1, 2228243, 0, 2, 2293779, 0, 2, 2293778, 0, 4, 2228242, 0, 4, 2293783, 262144, 5, 2293782, 458752, 4, 2293784, 262144, 5, 2031645, 393216, 3, 2097181, 65536, 3, 2162717, 262144, 5, 2228253, 262144, 5, 2293789, 262144, 5, 2359325, 262144, 5, 2424861, 262144, 5, 2490397, 196608, 3, 2490396, 196608, 3, 2490395, 196608, 3, 2490394, 196608, 3, 2490393, 196608, 3, 2490392, 196608, 3, 2490391, 196608, 3, 2490390, 196608, 3, 2490389, 196608, 3, 2490388, 196608, 3, 2424851, 131072, 2, 2490387, 131072, 3, 2359319, 262144, 5, 2359320, 262144, 5, 2359321, 262144, 5, 2359322, 262144, 5, 2359323, 524288, 4, 2359324, 262144, 5, 2293788, 393216, 4, 2293787, 458752, 5, 2228251, 458752, 5, 2162715, 458752, 4, 2162714, 262144, 5, 2162713, 262144, 5, 2162712, 262144, 5, 2162711, 262144, 5, 2162710, 262144, 5, 2162709, 262144, 5, 2162708, 262144, 5, 2097179, 65536, 3, 2097180, 65536, 3, 2162716, 262144, 5, 2424860, 262144, 5, 2424859, 262144, 5, 2424858, 262144, 5, 2424857, 262144, 5, 2424856, 262144, 5, 2424855, 262144, 5, 2424854, 262144, 5, 2424853, 262144, 5, 2359317, 393216, 5, 2359316, 262144, 5, 2293780, 262144, 5, 2424852, 262144, 5, 2293781, 262144, 5, 2359318, 0, 4, 2293786, 393216, 5, 2228252, 393216, 4, 2228250, 393216, 5, 2293785, 262144, 5, 2097182, 65536, 3, 2162718, 262144, 5, 2228254, 262144, 5, 2293790, 65536, 4, 2359326, 262144, 5, 2424862, 262144, 5, 2490398, 196608, 3, 1966110, 196608, 1, 2031646, 655360, 3, 1966109, 196608, 1, 2097183, 65536, 3, 2097184, 65536, 3, 2097185, 65536, 3, 2097186, 65536, 3, 2031647, 655360, 5, 2031648, 524288, 3, 2031649, 655360, 3, 1966111, 196608, 1, 1966112, 196608, 1, 1966113, 196608, 1, 2162721, 65536, 2, 2359328, 0, 4, 2293791, 262144, 5, 2228255, 262144, 5, 2162719, 262144, 5, 2162720, 262144, 5, 2228256, 262144, 5, 2293792, 262144, 5, 2228257, 262144, 5, 2162723, 458752, 4, 2228259, 458752, 5, 2293795, 458752, 4, 2359331, 458752, 5, 2424867, 524288, 4, 2490399, 196608, 3, 2490400, 196608, 3, 2490401, 196608, 3, 2490402, 196608, 3, 2490403, 196608, 3, 2490404, 196608, 3, 2424868, 262144, 5, 2359332, 393216, 4, 2293796, 262144, 5, 2228260, 262144, 5, 2162724, 262144, 5, 2097188, 65536, 3, 2031652, 458752, 3, 1966114, 196608, 1, 1966115, 196608, 1, 1966116, 196608, 1, 2031650, 327680, 3, 2031651, 393216, 3, 2097187, 65536, 3, 2359329, 262144, 5, 2359330, 393216, 5, 2162722, 262144, 5, 2228258, 393216, 5, 2293794, 262144, 5, 2293793, 262144, 5, 2424866, 262144, 5, 2424865, 262144, 5, 2424864, 262144, 5, 2424863, 262144, 5, 2359327, 262144, 5, 2162725, 262144, 5, 2228261, 262144, 5, 2162726, 0, 4, 2228262, 262144, 5, 2162727, 262144, 5, 2228263, 458752, 4, 2162728, 262144, 5, 2228264, 262144, 5, 2162729, 262144, 5, 2228265, 262144, 5, 2162730, 262144, 5, 2228266, 262144, 5, 2162731, 262144, 5, 2228267, 65536, 4, 2162732, 262144, 5, 2228268, 262144, 5, 2162733, 327680, 5, 2228269, 327680, 5, 2293804, 262144, 5, 2359340, 262144, 5, 2293805, 327680, 5, 2359341, 327680, 5, 2293802, 262144, 5, 2359338, 262144, 5, 2293803, 262144, 5, 2359339, 262144, 5, 2293800, 393216, 4, 2359336, 393216, 4, 2293801, 262144, 5, 2359337, 262144, 5, 2293798, 393216, 5, 2359334, 393216, 5, 2293799, 458752, 5, 2359335, 458752, 5, 2293797, 262144, 5, 2359333, 262144, 5, 2424869, 262144, 5, 2424876, 262144, 5, 2424870, 262144, 5, 2424871, 524288, 4, 2424872, 262144, 5, 2424873, 262144, 5, 2424874, 262144, 5, 2424875, 262144, 5, 2097197, 0, 3, 2424877, 327680, 5, 2097195, 65536, 3, 2097194, 65536, 3, 2097193, 65536, 3, 2097192, 65536, 3, 2097191, 65536, 3, 2097190, 65536, 3, 2097189, 65536, 3, 2097196, 65536, 3, 2031653, 524288, 3, 2031654, 655360, 4, 2031655, 655360, 4, 2031656, 655360, 4, 2031657, 655360, 4, 2031658, 327680, 3, 2031659, 393216, 3, 2031660, 458752, 3, 2031661, 524288, 3, 1966117, 196608, 1, 1966118, 196608, 1, 1966119, 196608, 1, 1966120, 196608, 1, 1966121, 196608, 1, 1966122, 196608, 1, 1966123, 196608, 1, 1966124, 196608, 1, 1966125, 196608, 1, 1966126, 262144, 1, 2097198, 262144, 2, 2162734, 262144, 2, 2228270, 262144, 2, 2293806, 262144, 2, 2359342, 262144, 2, 2424878, 262144, 2, 2490405, 196608, 3, 2490406, 196608, 3, 2490407, 196608, 3, 2490408, 196608, 3, 2490409, 196608, 3, 2490410, 196608, 3, 2490411, 196608, 3, 2490412, 196608, 3, 2490413, 196608, 3, 2490414, 262144, 3, 2031662, 262144, 2)
layer_1/name = "2"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "3"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="Cave_Entrance" parent="." instance=ExtResource("5_eklv8")]
position = Vector2(349.208, 589.882)

[node name="ToMineSign" type="Sprite2D" parent="Cave_Entrance"]
position = Vector2(22.013, 0)
scale = Vector2(0.34991, 0.34991)
texture = ExtResource("13_6nslk")

[node name="player" parent="." instance=ExtResource("2_buv0e")]
position = Vector2(716.426, 580.884)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.164706, 0.113725, 0.0588235, 1)

[node name="light_lower_left" parent="." instance=ExtResource("5_nbqpy")]
position = Vector2(295, 581)
scale = Vector2(1, 0.999999)

[node name="light_lower_right" parent="." instance=ExtResource("5_nbqpy")]
position = Vector2(378, 613)
scale = Vector2(1, 0.999999)

[node name="light_upper_left" parent="." instance=ExtResource("5_nbqpy")]
position = Vector2(295, 536)
scale = Vector2(1, 0.999999)

[node name="light_upper_right" parent="." instance=ExtResource("5_nbqpy")]
position = Vector2(375, 504)
scale = Vector2(1, 0.999999)

[node name="Gold" parent="." instance=ExtResource("4_s2apd")]
position = Vector2(656.391, 592.881)

[node name="bat" parent="." node_paths=PackedStringArray("player") instance=ExtResource("8_xiclq")]
position = Vector2(500.298, 526.895)
player = NodePath("../player")
attack_damage = 0.1

[node name="Node" parent="." instance=ExtResource("8_pmftk")]

[node name="Whiskey" parent="." instance=ExtResource("10_et4ya")]
position = Vector2(444.264, 585.883)

[node name="DoorToOutside" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("11_1rg27")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorToOutside"]
position = Vector2(279.166, 543.891)
shape = SubResource("RectangleShape2D_jkb68")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Sign" type="Sprite2D" parent="."]
position = Vector2(384.229, 573.885)

[node name="Area2D" type="Area2D" parent="Sign"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sign/Area2D"]
shape = SubResource("RectangleShape2D_evr8a")

[node name="light_lower_left2" parent="." instance=ExtResource("5_nbqpy")]
position = Vector2(520.31, 504.899)
scale = Vector2(1, 0.999998)

[node name="MineLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 630.375
offset_top = 535.893
offset_right = 681.375
offset_bottom = 577.893
text = "Press E
to mine"
metadata/_edit_use_anchors_ = true

[node name="AttackLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 529.315
offset_top = 535.893
offset_right = 580.315
offset_bottom = 577.893
text = "Press Q
to attack"
metadata/_edit_use_anchors_ = true

[node name="WhiskeyLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 420.25
offset_top = 535.893
offset_right = 487.25
offset_bottom = 577.893
text = "Drink on
Whiskey"
metadata/_edit_use_anchors_ = true

[node name="InteractLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 322.192
offset_top = 512.898
offset_right = 389.192
offset_bottom = 554.898
text = "Press F
to enter
other area"
metadata/_edit_use_anchors_ = true

[node name="ToTownSign" type="Sprite2D" parent="."]
position = Vector2(262.156, 554.889)
scale = Vector2(0.566706, 0.566706)
texture = ExtResource("12_f2gb0")

[connection signal="body_entered" from="DoorToOutside" to="DoorToOutside" method="_on_body_entered"]
[connection signal="body_exited" from="DoorToOutside" to="DoorToOutside" method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="DoorToOutside" method="_on_timer_timeout"]
